--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 VITE_MS_API=/api
 VITE_API_TARGET=http://127.0.0.1:8080
+VITE_WHATSAPP_SERVICE_URL=http://127.0.0.1:3001
+VITE_WHATSAPP_SERVICE_TOKEN=agenda-pro-local-token
